added canvas in html and javascript

--- a/snakegame.html
+++ b/snakegame.html
@@ -4,6 +4,7 @@
         <title>Snake Game App by Reid Muchow</title>
     </head>
     <body>
+        <canvas id="gameCanvas" width="800" height="600"></canvas>
         
     </body>
 </html>
