--- a/snakegame.html
+++ b/snakegame.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <canvas id="gameCanvas" width="800" height="600"></canvas>
-        
+        <script src="snakegame.js"></script>
     </body>
 </html>
