--- a/snakegame.html
+++ b/snakegame.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <title>Snake Game App by Reid Muchow</title>
+        <link rel="stylesheet" href="snakegame.css"/>
     </head>
     <body>
+        <div class="canvas" id="canvasDiv">
         <canvas id="gameCanvas" width="800" height="600"></canvas>
+        </div>
         <script src="snakegame.js"></script>
     </body>
 </html>
