--- a/snakegame.html
+++ b/snakegame.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="snakegame.css"/>
     </head>
     <body>
+        <div id="score">Score = 0
+        </div>
         <div class="canvas" id="canvasDiv">
         <canvas id="gameCanvas" width="800" height="600"></canvas>
         </div>
