--- a/index.html
+++ b/index.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Snake Game App by Reid Muchow</title>
-        <link rel="stylesheet" href="snakegame.css"/>
-    </head>
-    <body>
-        <div id="score">Score = 0
-        </div>
-        <div class="canvas" id="canvasDiv">
-        <canvas id="gameCanvas" width="800" height="600"></canvas>
-        </div>
-        <script src="snakegame.js"></script>
-    </body>
+  <head>
+    <title>Snake Game App by Reid Muchow</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="snakegame.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
+    <div class="canvas" id="canvasDiv">
+      <h4 class="ml-1 score-text" id="score">=  0</h4>
+      <img class="apple" src="apples.png" />
+      <canvas id="gameCanvas" width="800" height="600"></canvas>
+      <h1 class="text-right">Yes, snakes eat apples.</h1>
+      <h2 class="text-right">
+        A <span class="javascript-text">javascript</span> 2D animation game.
+      </h2>
+      <img class="cursorImage" src="302301-200.png" />
+      <p>Use the keyboard cursor to feed the snake</p>
+    </div>
+    <div class="otherContainer"></div>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+    <script src="snakegame.js"></script>
+  </body>
 </html>
+
